[gd_scene load_steps=8 format=2]

[ext_resource path="res://buildings/components/Column.gd" type="Script" id=1]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -0.5, 2, -0.5, 1, 1.00136e-05, 1 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 184, 0, 184, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 56, 0, 56, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 184, 0, 56, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 184, 0, 184, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 56, 0, 184, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 56, 0, 56 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( 0.5, 0, -0.5, 1.00136e-05, 2, 1 ),
"array_data": PoolByteArray( 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 0, 0, 0, 0, 0, 127, 129, 0, 184, 0, 0, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 63, 127, 0, 0, 0, 0, 0, 127, 129, 0, 56, 0, 192, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 191, 127, 0, 0, 0, 0, 0, 127, 129, 0, 184, 0, 192, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 0, 0, 0, 0, 0, 127, 129, 0, 184, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 127, 0, 0, 0, 0, 0, 127, 129, 0, 56, 0, 0, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 63, 127, 0, 0, 0, 0, 0, 127, 129, 0, 56, 0, 192 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -0.5, 0, -0.5, 1, 2, 1.00136e-05 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 127, 0, 0, 129, 0, 184, 0, 0, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 191, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 0, 192, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 0, 0, 129, 0, 127, 0, 0, 129, 0, 184, 0, 192, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 127, 0, 0, 129, 0, 184, 0, 0, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 0, 0, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 191, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 0, 192 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -0.5, 0, -0.5, 1.00136e-05, 2, 1.00001 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 129, 0, 0, 0, 0, 0, 127, 127, 0, 56, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 129, 0, 0, 0, 0, 0, 127, 127, 0, 184, 0, 192, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 63, 129, 0, 0, 0, 0, 0, 127, 127, 0, 56, 0, 192, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 129, 0, 0, 0, 0, 0, 127, 127, 0, 56, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 129, 0, 0, 0, 0, 0, 127, 127, 0, 184, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 129, 0, 0, 0, 0, 0, 127, 127, 0, 184, 0, 192 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -0.5, 0, 0.5, 1.00001, 2, 1.00136e-05 ),
"array_data": PoolByteArray( 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 184, 0, 192, 0, 0, 0, 63, 0, 0, 0, 64, 0, 0, 0, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 0, 192, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 184, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 63, 0, 0, 127, 0, 127, 0, 0, 127, 0, 184, 0, 192 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 6
}

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 1, 0.5 )

[node name="Column" type="StaticBody"]
collision_layer = 2147483653
collision_mask = 5
script = ExtResource( 1 )
render_layers_3D = 7

[node name="Top" type="MeshInstance" parent="."]
layers = 7
mesh = SubResource( 1 )
material/0 = null

[node name="XPosFace" type="MeshInstance" parent="."]
layers = 7
mesh = SubResource( 2 )
material/0 = null

[node name="ZNegFace" type="MeshInstance" parent="."]
layers = 7
mesh = SubResource( 3 )
material/0 = null

[node name="XNegFace" type="MeshInstance" parent="."]
layers = 7
mesh = SubResource( 4 )
material/0 = null

[node name="ZPosFace" type="MeshInstance" parent="."]
layers = 7
mesh = SubResource( 5 )
material/0 = null

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 6 )
